[tool.poetry]
name = "fable-serde"
version = "0.2.0"
description = "A simple, linear, non-recursive data interchange specification"
authors = ["Yannis Katsaros <yannis@katsaros.io>"]
license = "GPL-3.0"
packages = [
    {include = "fable"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.6.0"
pytest = "^6.0.2"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
